# ROCKETMEN

./: JOURNAL.md  README.md
Prometheus/: Rocket#1.ork  Rocket#4.ork
Research/Talos/: index.tex  references.bib
Talos/: .cproject  .mxproject  .project  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  Talos.ioc  Talos.launch  openocd.cfg
Talos/Client/: Cargo.toml
Talos/Client/src/: main.rs
Talos/Core/Inc/: main.h
Talos/Core/Src/: main.c  stm32f4xx_hal_msp.c
Talos/Debug/: Talos.elf  Talos.list  Talos.map  objects.list
Talos/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
Talos/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_gpio.d  (+10 more)
Talos/Debug/FATFS/App/: fatfs.d  subdir.mk
Talos/Firmware/: .cproject.bak  .mxproject  .project.bak  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  Talos.ioc  openocd.cfg
Talos/Firmware/Core/Inc/: main.h
Talos/Firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c
Talos/Firmware/Tests/: main.py  serial_test.py
Talos/PCB/: Talos v102.brd  Talos_v39.sch
Talos/Release/: Talos.elf  Talos.list  Talos.map  makefile  objects.list
Talos/Release/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
Talos/Release/FATFS/App/: fatfs.d  subdir.mk
Talos/Server/: Cargo.toml
Talos/Server/src/: main.rs
Talos/Web/: README.md  index.css  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Talos/Web/public/: CNAME
Talos/Web/src/: App.tsx  Chart.tsx  Model.tsx  Rocket.tsx  Types.tsx
docs/: index.html
docs/assets/: index-CA914-Qu.js  index-DP9HPfhY.js  index-DhRRQMjb.js  index-DzUZ5zZL.js  index-r72bwkLn.css
(+26 files in other folders)
