[package]
name = "talos-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serialport = "4.6.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = [
    "rustls-tls-webpki-roots",
] }
futures = "0.3"
log = "0.4"
env_logger = "0.11.6"
hyper = { version = "1.5.2", features = ["server", "http1"] }
hyper-util = "0.1.10"
hyper-tungstenite = "0.17.0"
http-body-util = "0.1.2"
